--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -11,7 +11,7 @@
 
         {% load static %}
 
-        <link rel="stylesheet" type="text/css" href="{% static 'home/css/bootstrap.min.css' %}" >
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" >
         <link rel="stylesheet" type="text/css" href="{% static 'home/css/custom.css' %}" >
 
         {% block style %}
@@ -66,7 +66,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="{% static 'home/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <footer class="container">
         &copy Kristófer Reykjalín Þorláksson
