--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -35,8 +35,9 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         {% if user.is_authenticated %}
-                        <li><a href="https://plex.krey.is/">Plex</a></li>
                         <li><a href="/torrent/">Torrents</a></li>
+                        <li><a href="http://dl.krey.is/" >Transmission</a></li>
+                        <li><a href="https://plex.krey.is/">Plex</a></li>
                         <li><a href="/logout/" >Log Out</a></li>
                         {% else %}
                         <li><a href="/login/" >Log In</a></li>
