--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -38,6 +38,10 @@
                         <li><a href="/torrent/">Torrents</a></li>
                         <li><a href="http://dl.krey.is/" >Transmission</a></li>
                         <li><a href="https://plex.krey.is/">Plex</a></li>
+                        {% endif %}
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right" >
+                        {% if user.is_authenticated %}
                         <li><a href="/logout/" >Log Out</a></li>
                         {% else %}
                         <li><a href="/login/" >Log In</a></li>
