Add torrent list and upload views
Upload view is non-functional, simply passes data to controller

List view interacts with transmission-daemon to get information

--- a/torrent/templates/torrent/index.html
+++ b/torrent/templates/torrent/index.html
@@ -3,6 +3,8 @@
 
 {% block content %}
 
-Work in progress...
+<a href="torrent/list" >Torrent List</a>
+<br/>
+<a href="torrent/upload" >Upload torrent</a>
 
 {% endblock %}
