Fix torrent URLs

--- a/torrent/templates/torrent/index.html
+++ b/torrent/templates/torrent/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-<a href="torrent/list" >Torrent List</a>
+<a href="list" >Torrent List</a>
 <br/>
-<a href="torrent/upload" >Upload torrent</a>
+<a href="upload" >Upload torrent</a>
 
 {% endblock %}
