--- a/torrent/templates/torrent/list.html
+++ b/torrent/templates/torrent/list.html
@@ -18,6 +18,6 @@
     {% endfor %}
 </table>
 
-<a href="torrent/upload" >Upload torrent</a>
+<a href="upload" >Upload torrent</a>
 
 {% endblock %}
