Add bootstrap styling to table

--- a/torrent/templates/torrent/list.html
+++ b/torrent/templates/torrent/list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<table style="width: 100%">
+<table class="table" style="width: 100%">
     <tr>
         {% for l in header %}
             <th>{{l}}</th>
