--- a/torrent/templates/torrent/list.html
+++ b/torrent/templates/torrent/list.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<table class="table" style="width: 100%">
+<table class="table">
     <tr>
         {% for l in header %}
             <th>{{l}}</th>
@@ -12,7 +12,7 @@
     {% for r in data %}
     	<tr>
             {% for l in r %}
-                <td>{{l}}</td>
+                <td style="white-space:nowrap">{{l}}</td>
             {% endfor %}
         </tr>
     {% endfor %}
